--- a/src/SourceGenerators/XamlGenerationTests/XamlGenerationTests.csproj
+++ b/src/SourceGenerators/XamlGenerationTests/XamlGenerationTests.csproj
@@ -22,26 +22,26 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'MonoAndroid90'">
-		<PackageReference Include="Xamarin.Android.Support.v4">
-			<Version>26.1.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.Legacy.Support.v4">
+			<Version>1.0.0-rc1</Version>
 		</PackageReference>
-		<PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
-			<Version>26.1.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.AppCompat">
+			<Version>1.1.0-rc1</Version>
 		</PackageReference>
-		<PackageReference Include="Xamarin.Android.Support.v7.RecyclerView">
-			<Version>26.1.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.RecyclerView">
+			<Version>1.1.0-rc1</Version>
 		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'MonoAndroid10.0'">
-		<PackageReference Include="Xamarin.Android.Support.v4">
-			<Version>28.0.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.Legacy.Support.v4">
+			<Version>1.0.0-rc1</Version>
 		</PackageReference>
-		<PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
-			<Version>28.0.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.AppCompat">
+			<Version>1.1.0-rc1</Version>
 		</PackageReference>
-		<PackageReference Include="Xamarin.Android.Support.v7.RecyclerView">
-			<Version>28.0.0.1</Version>
+		<PackageReference Include="Xamarin.AndroidX.RecyclerView">
+			<Version>1.1.0-rc1</Version>
 		</PackageReference>
 	</ItemGroup>
 
